# BOLT

./: .clang-tidy  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE.md  README.md
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml  Documentation.yml  ci.yml  gh-pages.yml
apps/: CMakeLists.txt
apps/bolt/solver/: CMakeLists.txt  LBMSolver.cpp  LBMSolver.hpp  main.cpp
apps/bolt/solver/configuration/: CMakeLists.txt  SimulationTime.hpp  SimulationTime.tpp  configuration.cpp  configuration.hpp  configuration_datatypes.hpp  logger.cpp  logger.hpp  utilities.cpp  utilities.hpp  validation.hpp  validation.tpp
apps/solver/: CMakeLists.txt  CommandLineOptions.cpp  CommandLineOptions.hpp  LBMSolver.cpp  LBMSolver.hpp  configuration.cpp  configuration.hpp  logger.cpp  logger.hpp  main.cpp  utilities.cpp  utilities.hpp
apps/solver/configuration/: CMakeLists.txt  SimulationTime.hpp  SimulationTime.tpp  configuration.cpp  configuration.hpp  configuration_datatypes.hpp  logger.cpp  logger.hpp  utilities.hpp  validation.hpp
cmake/: compile_settings.cmake  custom_targets.cmake  dependencies.cmake  fetch_content.cmake  initialization.cmake  interface_target.cmake  options.cmake  summary.cmake  variables.cmake
doc/: CMakeLists.txt  Doxyfile.in  bibliography.bib
doc/reference/: Home.md  Namespaces.md
docker/: ubuntu.Dockerfile
src/: CMakeLists.txt
src/base/: AlignedArray.hpp  AlignedArray.tpp  CMakeLists.txt
src/bolt/core/: CMakeLists.txt  aligned_allocator.tpp  array.tpp
src/bolt/core/concepts/: LatticeModel.hpp
src/bolt/core/containers/: AlignedArray.hpp  AlignedArray.tpp  aligned_allocator.hpp  aligned_allocator.tpp  array.hpp  array.tpp
src/bolt/lbm/: CMakeLists.txt  D1Q3.hpp  D2Q9.hpp  D3Q27.hpp  DistributionField.hpp  DistributionField.tpp
src/core/: AlignedArray.hpp  AlignedArray.tpp  CMakeLists.txt
src/core/concepts/: LatticeModel.hpp
src/core/containers/: AlignedArray.hpp  AlignedArray.tpp
src/core/time/: SimulationTime.hpp  SimulationTime.tpp
src/lbm/: AlignedArray.hpp  AlignedArray.tpp  BhatnagarGrossKrook.hpp  BhatnagarGrossKrook.tpp  CMakeLists.txt  CollisionOperatorBase.hpp  D1Q3.hpp  D1Q3.tpp  D2Q9.hpp  D2Q9.tpp  D3Q27.hpp  D3Q27.tpp  DensityDistribution.hpp  DensityDistribution.tpp  DiscreteMaxwellBoltzmann.hpp  DiscreteMaxwellBoltzmann.tpp  DistributionField.hpp  DistributionField.tpp  EquilibriumDistribution.hpp  EquilibriumDistributionBase.hpp  LatticeModel.hpp  LatticeModelBase.hpp  LatticeModelBase.tpp  NodeDistributionBase.hpp  VelocitySetBase.hpp  VelocitySetBase.tpp  kineticEquilibrium.hpp  kineticEquilibrium.tpp
src/utils/: CMakeLists.txt  aliases.hpp
test/: CMakeLists.txt
test/apps/: CMakeLists.txt
test/apps/solver/: CMakeLists.txt  SimulationTime.cpp  configuration.cpp  configuration_helper.hpp
test/core/: CMakeLists.txt
test/core/time/: SimulationTime.cpp
test/data/: configuration.toml
test/lbm/: BhatnagarGrossKrook.cpp  CMakeLists.txt  D1Q3.cpp  D2Q9.cpp  D3Q27.cpp  DensityDistribution.cpp  DiscreteMaxwellBoltzmann.cpp  DistributionField.cpp  LatticeModel.cpp  LatticeModelBase.cpp  VelocitySetBase.cpp  kineticEquilibrium.cpp
test/src/: CMakeLists.txt
test/src/core/: CMakeLists.txt
test/src/core/concepts/: LatticeModel.cpp
test/src/lbm/: CMakeLists.txt  D1Q3.cpp  D2Q9.cpp  D3Q27.cpp  DistributionField.cpp  LatticeModel.cpp
